# skillctl

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  PLAN.md  README.md
src/: cli.rs  command.rs  config.rs  git.rs  main.rs  output.rs
src/targets/: claude.rs  codex.rs  mod.rs
