[package]
name = "skillctl"
version = "0.0.0"
edition = "2021"
description = "Point Claude & Codex at a marketplace worktree, then reset them back."

[[bin]]
name = "skillctl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
which = "6"

[dev-dependencies]
tempfile = "3"
