[package]
name = "skillctl"
version = "0.1.0"
edition = "2021"
description = "Test the agent skills you're editing in a live Claude & Codex, then reset back."
license = "MIT"
readme = "README.md"

[[bin]]
name = "skillctl"
path = "src/main.rs"

[dependencies]
anstream = "1"
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
owo-colors = "4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Spinner only — the core `ProgressBar` API is not feature-gated, so skip the
# default `unicode-width`/`wasmbind` features to keep the dep tree lean.
indicatif = { version = "0.18", default-features = false }

[dev-dependencies]
tempfile = "3"
