[package]
name = "skillctl"
version = "0.1.0"
edition = "2021"
description = "Test the agent skills you're editing in a live Claude & Codex, then reset back."
license = "MIT"
readme = "README.md"

[[bin]]
name = "skillctl"
path = "src/main.rs"

[dependencies]
anstream = "1"
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
owo-colors = "4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# `reset` shallow-clones the configured remote into a temp dir (RAII-cleaned);
# also used by tests. A normal dependency is available to tests too.
tempfile = "3"
# Spinner only. `wasmbind` is irrelevant to a native CLI, but `unicode-width`
# is *not* optional in practice: it gates display-width measurement in both
# indicatif and its `console` backend, which the in-place spinner redraw uses
# to clear the right number of cells. Without it, the multi-byte tick glyphs
# and the `…`/`→`/`✓` in our streamed trail corrupt the redraw. Keep it lean
# (no `wasmbind`) but keep the width math correct.
indicatif = { version = "0.18", default-features = false, features = ["unicode-width"] }
